--- a/src/views/partials/login.ejs
+++ b/src/views/partials/login.ejs
@@ -76,7 +76,7 @@
 </style>
 
 <div class="modal-dialog">
-	<form id="login-form" class="login-container modal-content">
+	<div id="login-form" class="login-container modal-content">
 		<div class="login-header modal-header">
 			<h5 class="login-title modal-title" id="loginModalLabel">Login <i class="fas fa-sign-in-alt"></i></h5>
 			<i onclick="$('#loginModal').modal('hide')" class="bi bi-x-octagon text-danger" type="button"
