--- a/public/css/lyrics.css
+++ b/public/css/lyrics.css
@@ -1,6 +1,6 @@
 header {
-	left: 1.5rem;
-	top: 0rem;
+  left: 1.5rem;
+  top: 0rem;
 }
 
 .overlay-loader,
@@ -18,15 +18,16 @@ header {
   z-index: calc(var(--logo-z-index) + 100);
 }
 
-#timer,#wpm {
+#timer,
+#wpm {
   /* background-color: #f0f8ff77; */
   display: block;
   font-size: 1rem;
   margin: auto;
   width: fit-content;
 
-	border-color: #333;;
-	color: #e1e1e1ed;
+  border-color: #333;
+  color: #e1e1e1ed;
 
   letter-spacing: 4px;
   border-top: none;
@@ -38,7 +39,7 @@ header {
 }
 
 #wpm {
-	margin-top: 0rem;
+  margin-top: 0rem;
 }
 
 #play {
@@ -76,7 +77,7 @@ video {
 
   z-index: calc(var(--logo-z-index) + 10000);
 
-	mix-blend-mode: overlay;
+  mix-blend-mode: overlay;
 }
 
 .keyboard-container {
@@ -86,31 +87,31 @@ video {
 }
 
 .lyrics-container {
-	/* font-family: "Orbitron", sans-serif; */
-	font-family: "Kode Mono", "monospace";
-	font-weight: bold;
+  /* font-family: "Orbitron", sans-serif; */
+  font-family: 'Kode Mono', 'monospace';
+  font-weight: bold;
   font-style: normal;
-	
-	/* text-align: center; */
+
+  /* text-align: center; */
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
 
-	padding: 7px 1rem;
-	padding-top: 2px;
-	border-radius: 2px;
-	
+  padding: 7px 1rem;
+  padding-top: 2px;
+  border-radius: 2px;
+
   z-index: calc(var(--logo-z-index) + 100);
   position: absolute;
-	left: 50%;
+  left: 50%;
   top: 90%;
-  transform: translateX(-50%);	
+  transform: translateX(-50%);
 
-	background: #4444;
+  background: #4444;
   font-size: 2rem;
   letter-spacing: 3px;
-	/* mix-blend-mode: hard-light; */
-
+  /* mix-blend-mode: hard-light; */
+  transition: 1s ease-in-out;
 }
 
 .char {
@@ -133,6 +134,7 @@ video {
   /* opacity: 0.8; */
   /* color: #fff; */
   color: #ffb02edd;
+  /* transition: 0.2s ease-in-out; */
 }
 
 .cursor::after {
@@ -141,7 +143,7 @@ video {
 
   opacity: 0.9;
   color: #ffb02e;
-  content: "_";
+  content: '_';
   display: block;
   position: absolute;
   left: 55%;
