--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,20 +1,47 @@
-<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<p>Copyright © 2024 <a href="https://github.com/BinyamMamo/funkey" target="_blank" title="Funkey Repository" style="color: #5e8de7; font-weight: bold;">Funkey</a>. All rights reserved.
+<footer style="padding: 0 2rem;">
+	<div class="container d-flex flex-wrap justify-content-between align-items-center">
+		<p class="text-muted mb-0">&copy; 2024 <a href="https://github.com/BinyamMamo/funkey" target="_blank"
+				title="Funkey Repository" style="color: #5e8de7; font-weight: bold;">Funkey</a>. All rights reserved.</p>
 
-					<br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
-					<span style="font-size: 1rem;">
-					<br>Contact Me: 
-					</span>
-					<span style="font-size: 1.25rem; padding: 0 0.25em; letter-spacing: 0.15em;">
-						<a href="https://github.com/BinyamMamo" target="_blank" title="Github Profile"><i class="fab fa-github-square"></i></a>
-						<a href="https://www.linkedin.com/in/binyammamo/" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin"></i></a>
-						<a href="mailto:binyammamo01@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
-					</span>
-				</p>
-			</div>
-		</div>
+		<ul class="list-unstyled d-flex mb-0" style="gap:0.5em; font-size: 1rem;">
+			<li class="ms-3">
+				<a href="https://github.com/BinyamMamo" target="_blank" title="Github Profile">
+					<!-- <i class="fab fa-github-square"></i> -->
+					<!-- <img height="25" src="https://cdn.icon-icons.com/icons2/2351/PNG/512/logo_github_icon_143196.png" alt=""> -->
+					<img height="31" src="https://cdn.icon-icons.com/icons2/1476/PNG/512/github_101792.png" alt="">
+				</a>
+			</li>
+			<li class="ms-3"><a href="mailto:binyammamo01@gmail.com" target="_blank" title="Email">
+					<!-- <i class="fas fa-envelope"></i> -->
+					<img height="30" src="https://cdn.icon-icons.com/icons2/1228/PNG/512/1492692186-13gmail_83508.png" alt="">
+				</a>
+			</li>
+			<li class="ms-3">
+				<a href="https://www.linkedin.com/in/binyammamo/" target="_blank" title="Linkedin Profile">
+					<!-- <i class="fab fa-linkedin"></i> -->
+					<img height="31" src="https://cdn.icon-icons.com/icons2/1476/PNG/512/linkedin_101776.png" alt="">
+				</a>
+			</li>
+		</ul>
+
+		<p class="text-muted mb-0">Design: <a href="https://templatemo.com" target="_blank" class="footer-link text-muted"
+				style="font-style: italic; padding-right: 0.5em" title="free CSS templates">TemplateMo</a></p>
 	</div>
 </footer>
+
+<footer>
+
+	<!-- </footer>
+<div class="container text-center">
+	<p>Copyright © 2024 <a href="https://github.com/BinyamMamo/funkey" target="_blank" title="Funkey Repository"
+			style="color: #5e8de7; font-weight: bold;">Funkey</a>. All rights reserved.
+		<br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
+		<br>Contact Me:
+		<a href="https://github.com/BinyamMamo" target="_blank" title="Github Profile"><i
+				class="fab fa-github-square"></i></a>
+		<a href="https://www.linkedin.com/in/binyammamo/" target="_blank" title="Linkedin Profile"><i
+				class="fab fa-linkedin"></i></a>
+		<a href="mailto:binyammamo01@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+	</p>
+</div>
+</footer> -->
