fix: Improve profile editing performance and fix various issues
- Improve profile editing performance by avoiding unnecessary profile picture uploads
- Fix broken URL for default profile picture during sign-up
- Fix unnecessary text appearing during video upload
- Expand allowed file types for uploading lyrics to .txt, .srt, and .vtt

--- a/src/views/dashboard/upload.ejs
+++ b/src/views/dashboard/upload.ejs
@@ -244,7 +244,7 @@
 						<input name="video-upload" class="drop-browse" type="file" accept="video/*" style="display: none" />.
 					</span>
 					<input type="hidden" name="video" value="" />
-					<div class="file-name text-truncate" id="download"></div>
+					<!-- <div class="file-name text-truncate" id="download"></div> -->
 					<div class="file-details" style="display: none">
 						<i class="fas fa-file-video" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 						<div class="file-name text-truncate" id="fileName"></div>
@@ -263,7 +263,8 @@
 					<i class="fas fa-file-alt" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 					<span>Drop Lyrics here, or <a href="javascript:void(0)">browse</a>
 						<!-- <input class="drop-browse" type="file" name="video" accept="text/*" style="display: none">. -->
-						<input class="drop-browse" type="file" name="lyrics-upload" accept="text/*" style="display: none" />.
+						<input class="drop-browse" type="file" name="lyrics-upload" accept="text/plain,.srt,.vtt"
+							style="display: none" />.
 					</span>
 					<input type="hidden" name="lyrics" value="" />
 					<div class="file-details" style="display: none">
