--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -56,7 +56,7 @@
 						<i class="fas fa-camera-retro icon"></i>
 					</div>
 					<input type="file" id="avatar-upload" style="display: none" accept="images">
-					<input type="hidden" name="avatar" value="/assets/images/logo.png">
+					<input type="hidden" name="avatar" value="assets/images/logo.png">
 					<div class="form-group">
 						<label for="name"><i class="fa fa-user"></i> &nbsp;Name</label>
 						<input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required>
